Add serachng by query (#1)
* Update notifications

* Add Searcher interface

* Add Searcher implementation

* Fix RPNSearcher

* Convert Vehicle from interface to class

* Convert QueryTester to Juint5 test